--- a/client/pages/style.css
+++ b/client/pages/style.css
@@ -25,7 +25,7 @@ body {
     left: 0;
     height: calc(100% - 56px); /* Ensure it fills the remaining height */
     width: 60px;
-    background-color: #343a40;
+    background-color: #1b1d32;
     transition: width 0.3s;
     overflow-x: hidden;
     z-index: 1000;
@@ -40,7 +40,7 @@ body {
     padding: 15px;
     text-align: center;
     color: white;
-    background-color: #343a40;
+    background-color: #1b1d32;
     border: none;
     cursor: pointer;
 }
@@ -51,7 +51,7 @@ body {
 
 .canvas-menu {
     display: none;
-    background-color: #343a40;
+    background-color: #1b1d32;
     color: white;
     padding: 15px;
     border-radius: 8px;
@@ -86,10 +86,7 @@ body {
     margin-top: 10px;
 }
 
-.choice.correct {
-    font-weight: bold;
-    color: green;
-}
+
 
 .expanded {
     width: 250px;
@@ -111,4 +108,59 @@ body {
 
 .question input[type="radio"] {
     margin-right: 10px;
+}
+.textColor{
+    color: #f0f0f0;
+}
+.back-color{
+    background-color: #1b1d32;
+}
+.decorate{
+    text-decoration: none;
+}
+.notification {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    background-color: green; /* Success color */
+    z-index: 1000;
+    display: none; /* Hidden by default */
+}
+
+.hidden {
+    display: none;
+}
+#quizContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; /
+}
+
+.question {
+    width: 100%;
+    max-width: 600px;
+    margin: 10px;
+}
+
+@media (min-width: 576px) {
+    .question {
+        width: calc(50% - 20px);
+    }
+}
+
+@media (min-width: 768px) {
+    .question {
+        width: calc(33.333% - 20px);
+    }
+}
+
+@media (min-width: 992px) {
+    .question {
+        width: calc(25% - 20px);
+    }
 }
